# Advanced-Effects

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SetupConfigure.cmake  deploy_linux.sh  deploy_macos.sh  deploy_windows.sh  meson.build  version.cmake
.github/workflows/: build-linux.yml  build-windows.yml  build.yml  builds_desktop_cmake.yml  flatpak.yml
assets/linux/: Advanced-Effects.flatpak.yml
assets/macos/: Info.plist
assets/windows/: Advanced-Effects.rc  setup.nsi
buildscripts/cmake/: DeclareModuleSetup.cmake  FindSkia.cmake  (+4 more)
i18n/: README.md
share/icons/: CMakeLists.txt  windows_icons.rc
share/icons/AppIcon/: APP_AppIcon.icns
src/: CMakeLists.txt  README.md  main.cpp  meson.build  resources.qrc
src/app/: CMakeLists.txt  application.cpp  main.cpp  meson.build
src/app/assets/linux/: Advanced-Effects.appdata.xml  Advanced-Effects.desktop
src/app/configs/data/: shortcuts.xml
src/application/: AppCreation.cpp  AppCreation.h  CMakeLists.txt  app.cpp  app.h  cmdline.cpp  cmdline.h  main.cpp
src/application/internal/: GuiApplication.cpp  GuiApplication.h
src/appshell/: CMakeLists.txt  README.md  appshell.qrc  appshellmodule.cpp  appshellmodule.h  iappshellconfiguration.h
src/appshell/internal/: appshellactions.cpp  appshellactions.h  appshellactionscontroller.cpp  appshellactionscontroller.h  framelesswindowcontroller.h  mainwindowtitleprovider.cpp  mainwindowtitleprovider.h  platformdetails.cpp  platformdetails.h  toolbaractions.cpp  toolbaractions.h
src/appshell/internal/toolbar/: toolactioncontroller.cpp  toolactioncontroller.h  toolbaractions.cpp  toolbaractions.h  toolidentifier.h
src/appshell/qml/: AppWindow.qml  BaseCanvas.qml  CentralWidget.qml  FileTabBar.qml  Main.qml  PropertiesBar.qml  TimelineBar.qml  Topbar.qml  WindowContent.qml  WindowContents.qml
src/appshell/qml/Canvas/: OpenGLContainer.qml  ViewCanvas.qml
src/appshell/qml/Docks/: CentralWidget.qml  FileTabBar.qml  GeneralBar.qml  PropertiesBar.qml  TimelineBar.qml
src/appshell/qml/EditPage/: CentralWidget.qml  EditPage.qml
src/appshell/qml/EditPage/Panels/: GeneralBar.qml  GeneralBarHeader.qml  TimelineWidget.qml
src/appshell/qml/EditPage/Toolbars/: ToolSelection.qml
src/appshell/qml/GeneralBar/: Align.qml  Effects.qml  FillAndStroke.qml  GeneralBar.qml  Properties.qml
src/appshell/qml/Menu/: AppButtonBackground.qml  AppMenuBar.qml  AppSystemButtons.qml  AppTitlebar.qml  AppWindow.qml
src/appshell/qml/Pages/: EditPage.qml  README.md
src/appshell/qml/Preferences/: PreferencesDialog.qml  PreferencesPage.qml
src/appshell/qml/Preferences/internal/: PreferencesMenu.qml
src/appshell/qml/Timeline/: KeysView.qml  LeftNavigation.qml  ObjectsTreeView.qml  PlaybackActions.qml  QuickActions.qml  TimelineBar.qml  TimelineSecondsBar.qml  TimelineWidget.qml  TopbarTreeView.qml
src/appshell/qml/TitleBar/: AppMenuBar.qml  AppTitlebar.qml
src/appshell/qml/Toolbars/: README.md  SelectToolBar.qml  Topbar.qml
src/appshell/qml/Topbar/: Topbar.qml
src/appshell/qml/components/: GeneralBar.qml  Menubar.qml  README.md
src/appshell/qml/dialogs/: README.md
src/appshell/qml/topbar/: PlaybackWidget.qml  QuickAccessBar.qml  README.md  SwitchPageWidget.qml
src/appshell/qml/views/: EditPage.qml  RenderPage.qml  WelcomePage.qml
src/appshell/view/: appmenumodel.cpp  appmenumodel.h  mainwindowtitleprovider.cpp  mainwindowtitleprovider.h  navigableappmenumodel.cpp  navigableappmenumodel.h  toolbarmodel.cpp  toolbarmodel.h  toolselectionmodel.cpp  toolselectionmodel.h
src/appshell/view/canvas/: applicationcanvas.cpp  applicationcanvas.h
src/appshell/view/framelesswindow/: framelesswindowmodel.cpp  framelesswindowmodel.h
src/appshell/view/preferences/: preferencesmodel.cpp  preferencesmodel.h
src/context/: CMakeLists.txt  iglobalcontext.h
src/context/internal/: globalcontext.cpp  globalcontext.h  uicontextresolver.cpp
src/framework/: CMakeLists.txt
src/framework/app/: README.md
src/framework/project_file/: CMakeLists.txt
src/framework/ui/: CMakeLists.txt
src/framework/uicomponents/: CMakeLists.txt  README.md
src/glax_core/: CMakeLists.txt  app_info.cpp  app_info.hpp  translation.cpp  translation.hpp
src/glax_core/io/aep/: riff.hpp
src/glax_core/io/lottie/: lottie_importer.hpp
src/glax_core/model/: document_node.hpp  object.hpp
src/glax_core/model/animation/: animatable.hpp
src/glax_core/model/property/: object_list_property.hpp  option_list_property.hpp  property.cpp  property.hpp  reference_property.hpp  sub_object_property.hpp
src/glax_core/utils/: gzip.cpp  trace.cpp
src/modules/: README.md
src/projectscene/: CMakeLists.txt  README.md  iprojectfilescontroller.h  projectscene.qrc  projectscenemodule.cpp  projectscenemodule.h
src/projectscene/internal/: mocktreemodel.cpp  mocktreemodel.h  projectactionscontroller.cpp  projectactionscontroller.h  projectfilescontroller.cpp  projectfilescontroller.h  projectuiactions.cpp  projectuiactions.h
src/projectscene/internal/toolbar/: toolactioncontroller.cpp  toolactioncontroller.h  toolbaractions.cpp  toolbaractions.h  toolidentifier.h
src/projectscene/qml/App/ProjectScene/: LeftNavigation.qml  ObjectsTreeView.qml  QuickActions.qml  qmldir
src/projectscene/qml/App/ProjectScene/EditPage/: CentralWidget.qml  EditPage.qml
src/projectscene/qml/App/ProjectScene/EditPage/TabBar/: ProjectSwitchBar.qml  ProjectTab.qml
src/projectscene/qml/App/ProjectScene/EditPage/Toolbars/: ToolSelection.qml
src/projectscene/qml/App/ProjectScene/NewProjectDialog/: NewProject.qml  NewProjectButtonsPanel.qml
src/projectscene/qml/App/ProjectScene/TimelineWidget/: LeftNavigation.qml  TimelineWidget.qml
src/projectscene/qml/Timeline/: QuickActions.qml
src/projectscene/view/: projectmodel.cpp  projectmodel.h  toolbarmodel.cpp  toolbarmodel.h
src/projectscene/view/canvas/: applicationcanvas.cpp  applicationcanvas.h
src/projectscene/view/timeline/: keysview.cpp  keysview.h  timelinecontext.h
src/services/: CMakeLists.txt  OpenProjectsManager.cpp  OpenProjectsManager.h
subprojects/: meson.build
(+4 files in other folders)
