cmake = import('cmake')

subproj_qtappsetup = cmake.subdir('QtAppSetup')
dep_qtappsetup = subproj_qtappsetup.dependency('QtAppSetup')

subproj_potrace = cmake.subdir('potrace')
dep_potrace = subproj_potrace.dependency('potrace')

subproj_skia = cmake.subdir('skia')
dep_skia = subproj_skia.dependency('skia.friction')
